<resources>
    <string name="app_name">مفكرة</string> <!-- Room + ViewModel + LiveData + RecyclerView (MVVM) -->
    <string name="_1">1</string>
    <string name="Title">Title</string>
    <string name="Description">Description</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="priority">Priority:</string>
    <string name="hello">Hello</string>
    <string name="button">Button</string>
    <string name="date1">date</string>
    <string name="time1">time</string>
    <string name="time">time</string>
    <string name="date">date</string>
    <string name="Selecttimeofremmember">تحديد وقت التذكير</string>
    <string name="text_view_emailorphone">Email or Phone</string>

</resources>